fdo#76696: CurTOXType::GetFlatIndex(): fix inverted conditional

(regression from 6af1e845baa0ec63ce16f25868e5e3313bd647bb)

Change-Id: I22dd77fe9bb03f2cf4ce4518ef12c566aad66785